<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.alejo.saladapp.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <ImageView
                android:layout_height="60dp"
                android:layout_width="60dp"
                android:layout_gravity="center">
            </ImageView>

            <ImageView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:layout_gravity="center"
                android:id="@+id/Cimagen">
            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/pregunta"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/h1"
                    android:src="@drawable/ic_stare"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/h2"
                    android:src="@drawable/ic_stare" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/h3"
                    android:src="@drawable/ic_stare" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/h4"
                    android:src="@drawable/ic_stare" />
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/h5"
                    android:src="@drawable/ic_stare" />
            </LinearLayout>

            <TextView style="@style/textBasic"
                android:textColor="@color/black"
                android:text="@string/Nombre"/>
            <TextView style="@style/textBasic"
                android:id="@+id/Nconductor"
                android:text="@string/Nombre"/>

            <TextView style="@style/textBasic"
                android:textColor="@color/black"
                android:text="@string/placa"/>
            <TextView style="@style/textBasic"
                android:id="@+id/Nplaca"
                android:text="@string/placa"/>

            <TextView style="@style/textBasic"
                android:textColor="@color/black"
                android:text="@string/codigo"/>

            <TextView style="@style/textBasic"
                android:id="@+id/Ncodigobus"
                android:text="@string/codigo"/>

            <TextView style="@style/textBasic"
                android:textColor="@color/black"
                android:text="@string/ruta"/>

            <TextView style="@style/textBasic"
                android:id="@+id/Nruta"
                android:text="@string/ruta"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>

